add font and home,exp,contact

--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Resume Website</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Prompt&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="font.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Resume Website</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-
-</body>
-
+  <body style="background-color: rgb(43, 43, 43); text-align: center">
+    <div class="mx-auto" style="max-width: 1200px; text-align: center">
+      <br />
+      <div
+        class="vstack gap-5 border border-2 rounded-3 p-5"
+        style="color: rgb(149, 149, 149)"
+      >
+        <p class="text-center">
+          <a href="https://www.instagram.com/suphanxth/" target="_self"
+            ><span class="mx-3 fw-bold">Home</span></a
+          >
+          <a href="https://www.instagram.com/suphanxth/" target="_self"
+            ><span class="mx-3 fw-bold">Experience</span></a
+          >
+          <a href="https://www.instagram.com/suphanxth/" target="_self"
+            ><span class="mx-3 fw-bold">Contact</span></a
+          >
+        </p>
+        <p>
+          <img
+            src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.6435-9/197356412_4021805931207697_8796148780896549434_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHA53vArFChunKDGA9NCsz-0irrrGM7PUPSKuusYzs9Q0INxTwAkuwAQ2YDOmZcVPzCg2XAqEzyWajPJ2tI0Fo_&_nc_ohc=KP305ATWRQIAX8PYkWO&_nc_ht=scontent.fbkk14-1.fna&oh=00_AT_esieJLjgO8VXnd0G0UoiMWz-fzfWxXzAXi-Oqt-hg2Q&oe=62E47427"
+            width="200"
+            height="200"
+            style="object-fit: cover"
+            class="rounded-circle"
+          />
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
