--- a/exp.html
+++ b/exp.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="font.css" />
   </head>
 
-  <body style="background-color: rgb(43, 43, 43); text-align: center">
+  <body style="background-color: rgb(31, 31, 31); text-align: center">
     <div
       class="mx-auto"
       style="color: rgb(240, 240, 240); max-width: 1200px; text-align: center"
@@ -33,7 +33,7 @@
       <br />
       <div
         class="vstack gap-5 border border-2 rounded-3 p-5"
-        style="background-color: rgb(55, 55, 55); color: rgb(240, 240, 240)"
+        style="background-color: rgb(70, 70, 70); color: rgb(240, 240, 240)"
       >
         <p class="text-center fs-5">
           <a href="index.html" target="_self"
@@ -47,33 +47,8 @@
           >
         </p>
         <div>
-          <div class="d-flex">
-            <div style="width: 30%">
-              <img
-                src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.6435-9/197356412_4021805931207697_8796148780896549434_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHA53vArFChunKDGA9NCsz-0irrrGM7PUPSKuusYzs9Q0INxTwAkuwAQ2YDOmZcVPzCg2XAqEzyWajPJ2tI0Fo_&_nc_ohc=KP305ATWRQIAX8PYkWO&_nc_ht=scontent.fbkk14-1.fna&oh=00_AT_esieJLjgO8VXnd0G0UoiMWz-fzfWxXzAXi-Oqt-hg2Q&oe=62E47427"
-                width="200"
-                height="200"
-                style="object-fit: cover"
-                class="rounded-circle"
-              />
-            </div>
-            <div
-              style="
-                width: 70%;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-              "
-            >
-              <div class="fw-bold fs-5">Suphanath Wangthip</div>
-              <div style="text-align: left; width: 630px">
-                Hi, my name is Suphanath. I studied Computer Engineering. I love
-                programming. I'm interesting in program development.
-              </div>
-            </div>
-          </div>
+          <div class="fw-bold fs-3">Project Experience</div>
         </div>
-        <div>My Skill</div>
       </div>
     </div>
   </body>
