--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div>My Skill</div>
+        <div>My Skills</div>
         <div class="vstack align-items-center justify-content-center">
           <div
             class="card mb-3"
