add info contact

--- a/contact.html
+++ b/contact.html
@@ -47,34 +47,58 @@
           >
         </p>
         <div>
-          <div class="d-flex">
-            <div style="width: 30%">
-              <img
-                src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.6435-9/197356412_4021805931207697_8796148780896549434_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHA53vArFChunKDGA9NCsz-0irrrGM7PUPSKuusYzs9Q0INxTwAkuwAQ2YDOmZcVPzCg2XAqEzyWajPJ2tI0Fo_&_nc_ohc=KP305ATWRQIAX8PYkWO&_nc_ht=scontent.fbkk14-1.fna&oh=00_AT_esieJLjgO8VXnd0G0UoiMWz-fzfWxXzAXi-Oqt-hg2Q&oe=62E47427"
-                width="200"
-                height="200"
-                style="object-fit: cover"
-                class="rounded-circle"
-              />
-            </div>
-            <div
-              style="
-                width: 70%;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-              "
-            >
-              <div class="fw-bold fs-5">Suphanath Wangthip</div>
-              <div style="text-align: left; width: 630px">
-                Hi, my name is Suphanath. I studied Computer Engineering. I love
-                programming. I'm interesting in program development.
+            <div class="fw-bold fs-3">Contact Me</div>
+            <br>   
+            <div>
+                <div class="d-flex">
+                  <div style="width: 30%">
+                    <img
+                      src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.6435-9/197356412_4021805931207697_8796148780896549434_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHA53vArFChunKDGA9NCsz-0irrrGM7PUPSKuusYzs9Q0INxTwAkuwAQ2YDOmZcVPzCg2XAqEzyWajPJ2tI0Fo_&_nc_ohc=KP305ATWRQIAX8PYkWO&_nc_ht=scontent.fbkk14-1.fna&oh=00_AT_esieJLjgO8VXnd0G0UoiMWz-fzfWxXzAXi-Oqt-hg2Q&oe=62E47427"
+                      width="230"
+                      height="230"
+                      style="object-fit: cover"
+                      class="rounded-circle"
+                    />
+                  </div>
+                  <div
+                    style="
+                      width: 70%;
+                      display: flex;
+                      flex-direction: column;
+                      align-items: flex-start;
+                    "
+                  >
+                  <div style="text-align: left;">
+                    <table class="p1" style="width: 85%; padding-top: 10px;">
+                    <tr>
+                        <td>NAME</td>
+                        <td  class="p1"> Suphanath Wangthip</td>
+                    </tr>
+                    <tr>
+                        <td>Nickname</td>
+                        <td class="p1"> Game</td>
+                    </tr>
+                    <tr>
+                        <td>Address</td>
+                        <td class="p1"> 299 NaKuam Rd. Tambon Chomphu, Muang Lampang, Lampang 52100</td>
+                    </tr>
+                    <tr>
+                        <td>Facebook</td>
+                        <td class="p1"><a href="https://www.facebook.com/supanut.wangthip" target="_blank"> https://www.facebook.com/supanut.wangthip</a></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td class="p1"><a href = "mailto: suphanath_w@cmu.ac.th">suphanath_w@cmu.ac.th</a></td>
+                    </tr>
+                    <tr>
+                        <td>Phone</td>
+                        <td class="p1"> 0897014299</td>
+                    </tr>
+                    </table>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
         </div>
-        <div>My Skill</div>
-      </div>
     </div>
   </body>
 </html>
