--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <link rel="stylesheet" href="font.css" />
   </head>
 
-  <body style="background-color: rgb(31, 31, 31); text-align: center">
+  <body style="background-color: #789cce; text-align: center">
     <div
       class="mx-auto"
-      style="color: rgb(240, 240, 240); max-width: 1200px; text-align: center"
+      style="color: rgb(0, 0, 0); max-width: 1200px; text-align: center"
     >
       <br />
       <div
         class="vstack gap-5 border border-2 rounded-3 p-5"
-        style="background-color: rgb(70, 70, 70); color: rgb(240, 240, 240)"
+        style="background-color: rgb(255, 255, 255); color: rgb(0, 0, 0)"
       >
         <p class="text-center fs-5">
           <a href="index.html" target="_self"
@@ -81,8 +81,8 @@
             class="card mb-3"
             style="
               max-width: 700px;
-              background-color: rgb(66, 66, 66);
-              color: rgb(240, 240, 240);
+              background-color: #789cce;
+              color: rgb(255, 255, 255);
             "
           >
             <div class="row g-0">
@@ -98,10 +98,7 @@
                   <h5 class="card-title">Programming</h5>
                   <p
                     class="card-text"
-                    style="
-                      background-color: rgb(66, 66, 66);
-                      color: rgb(240, 240, 240);
-                    "
+                    style="background-color: #789cce; color: rgb(255, 255, 255)"
                   >
                     I love coding! I code desktop application using C++.
                   </p>
@@ -113,8 +110,8 @@
             class="card mb-3"
             style="
               max-width: 700px;
-              background-color: rgb(66, 66, 66);
-              color: rgb(240, 240, 240);
+              background-color: #789cce;
+              color: rgb(255, 255, 255);
             "
           >
             <div class="row g-0">
@@ -130,10 +127,7 @@
                   <h5 class="card-title">Gamer</h5>
                   <p
                     class="card-text"
-                    style="
-                      background-color: rgb(66, 66, 66);
-                      color: rgb(240, 240, 240);
-                    "
+                    style="background-color: #789cce; color: rgb(255, 255, 255)"
                   >
                     I love to play video game. I spend many time to play fps
                     game.
@@ -146,8 +140,8 @@
             class="card mb-3"
             style="
               max-width: 700px;
-              background-color: rgb(66, 66, 66);
-              color: rgb(240, 240, 240);
+              background-color: #789cce;
+              color: rgb(255, 255, 255);
             "
           >
             <div class="row g-0">
@@ -163,10 +157,7 @@
                   <h5 class="card-title">Football</h5>
                   <p
                     class="card-text"
-                    style="
-                      background-color: rgb(66, 66, 66);
-                      color: rgb(240, 240, 240);
-                    "
+                    style="background-color: #789cce; color: rgb(255, 255, 255)"
                   >
                     I like to play football. I can play football with everyone.
                   </p>
