--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="font.css" />
   </head>
 
-  <body style="background-color: rgb(31, 31, 31); text-align: center">
+  <body style="background-color: #789cce; text-align: center">
     <div
       class="mx-auto"
       style="color: rgb(240, 240, 240); max-width: 1200px; text-align: center"
@@ -33,7 +33,7 @@
       <br />
       <div
         class="vstack gap-5 border border-2 rounded-3 p-5"
-        style="background-color: rgb(70, 70, 70); color: rgb(240, 240, 240)"
+        style="background-color: white; color: rgb(0, 0, 0)"
       >
         <p class="text-center fs-5">
           <a href="index.html" target="_self"
