--- a/exp.html
+++ b/exp.html
@@ -25,15 +25,15 @@
     <link rel="stylesheet" href="font.css" />
   </head>
 
-  <body style="background-color: rgb(31, 31, 31); text-align: center">
+  <body style="background-color: #789cce; text-align: center">
     <div
       class="mx-auto"
-      style="color: rgb(240, 240, 240); max-width: 1200px; text-align: center"
+      style="color: rgb(0, 0, 0); max-width: 1200px; text-align: center"
     >
       <br />
       <div
         class="vstack gap-5 border border-2 rounded-3 p-5"
-        style="background-color: rgb(70, 70, 70); color: rgb(240, 240, 240)"
+        style="background-color: rgb(255, 255, 255); color: rgb(0, 0, 0)"
       >
         <p class="text-center fs-5">
           <a href="index.html" target="_self"
@@ -46,8 +46,67 @@
             ><span class="mx-3 fw-bold">Contact</span></a
           >
         </p>
-        <div>
+        <div class="vstack align-items-center justify-content-center">
           <div class="fw-bold fs-3">Project Experience</div>
+          <br />
+          <div
+            class="card mb-3"
+            style="
+              max-width: 700px;
+              background-color: #789cce;
+              color: rgb(255, 255, 255);
+            "
+          >
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="\Img\basic_com.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Basic CPE Project</h5>
+                  <p
+                    class="card-text"
+                    style="background-color: #789cce; color: rgb(255, 255, 255)"
+                  >
+                    Create game in Scratch.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card mb-3"
+            style="
+              max-width: 700px;
+              background-color: #789cce;
+              color: rgb(255, 255, 255);
+            "
+          >
+            <div class="row g-0">
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Computer Programming Project</h5>
+                  <p
+                    class="card-text"
+                    style="background-color: #789cce; color: rgb(255, 255, 255)"
+                  >
+                    Create a calculator program in C++.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <img
+                  src="\Img\Calculator.PNG"
+                  class="img-fluid rounded-end"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
