--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                   <div style="text-align: left;">
                     <table class="p1" style="width: 85%; padding-top: 10px;">
                     <tr>
-                        <td>NAME</td>
+                        <td>Name</td>
                         <td  class="p1"> Suphanath Wangthip</td>
                     </tr>
                     <tr>
