--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                     </tr>
                     <tr>
                         <td>Address</td>
-                        <td class="p1"> 299 NaKuam Rd. Tambon Chomphu, Muang Lampang, Lampang 52100</td>
+                        <td class="p1"> 299 NaKuam Rd., Tambon Chomphu, Muang Lampang, Lampang 52100</td>
                     </tr>
                     <tr>
                         <td>Facebook</td>
