--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href="index.html" target="_self"
             ><span class="mx-3 fw-bold">Home</span></a
           >
-          <a href="exp.html" target="_self"
+          <a href="experience.html" target="_self"
             ><span class="mx-3 fw-bold">Experience</span></a
           >
           <a href="contact.html" target="_self"
