--- a/experience.html
+++ b/experience.html
@@ -60,7 +60,7 @@
             <div class="row g-0">
               <div class="col-md-4">
                 <img
-                  src="\Img\basic_com.jpg"
+                  src="Img\basic_com.jpg"
                   class="img-fluid rounded-start"
                   alt="..."
                 />
@@ -100,7 +100,7 @@
               </div>
               <div class="col-md-4">
                 <img
-                  src="\Img\Calculator.PNG"
+                  src="Img\Calculator.PNG"
                   class="img-fluid rounded-end"
                   alt="..."
                 />
